--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0"
+        "nunomaduro/larastan": "^0.4.1",
+        "orchestra/testbench": "^4.2"
     }
 }
